tests/baselines/reference/moduleSharesNameWithImportDeclarationInsideIt5.errors.txt
moduleSharesNameWithImportDeclarationInsideIt5.ts(10,12): error TS2300: Duplicate identifier 'M'.
moduleSharesNameWithImportDeclarationInsideIt5.ts(11,12): error TS2300: Duplicate identifier 'M'.


==== moduleSharesNameWithImportDeclarationInsideIt5.ts (2 errors) ====
    namespace Z {
        export namespace M {
            export function bar() {
                return "";
            }
        }
        export interface I { }
    }
    namespace A.M {
        import M = Z.I;
               ~
!!! error TS2300: Duplicate identifier 'M'.
        import M = Z.M;
               ~
!!! error TS2300: Duplicate identifier 'M'.
    
        export function bar() {
        }
        M.bar(); // Should call Z.M.bar
    }